move core, dao, service, service-api modules and pom.xml from dev branch