@@ -7,21 +7,19 @@ import org.modelmapper.AbstractConverter;
 import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.stereotype.Component;
 
-import java.util.stream.Collectors;
-
 @Component
 public class SearchEventsDtoMapper extends AbstractConverter<Event, SearchEventsDto> {
     @Override
     protected SearchEventsDto convert(Event event) {
         String language = LocaleContextHolder.getLocale().getLanguage();
-
         return SearchEventsDto.builder()
             .id(event.getId())
             .title(event.getTitle())
-            .creationDate(event.getCreationDate())
-            .tags(event.getTags().stream().flatMap(t -> t.getTagTranslations().stream())
+            .tags(event.getTags().stream()
+                .flatMap(t -> t.getTagTranslations().stream())
                 .filter(tagTranslation -> tagTranslation.getLanguage().getCode().equals(language))
-                .map(TagTranslation::getName).collect(Collectors.toList()))
+                .map(TagTranslation::getName)
+                .toList())
             .build();
     }
 }
