@@ -25,7 +25,7 @@ public class FilterServiceImpl implements FilterService {
     public UserFilterDtoResponse save(Long userId, UserFilterDtoRequest dto) {
         List<Filter> filters = filterRepo.getAllFilters(userId);
         if (filters.size() == 3) {
-            return modelMapper.map(filters.get(0), UserFilterDtoResponse.class);
+            return modelMapper.map(filters.getFirst(), UserFilterDtoResponse.class);
         }
         Filter filter = modelMapper.map(dto, Filter.class);
         User user = userRepo.findById(userId)
