@@ -5,13 +5,12 @@ import com.google.maps.GeocodingApi;
 import com.google.maps.NearbySearchRequest;
 import com.google.maps.PlacesApi;
 import com.google.maps.errors.ApiException;
-import com.google.maps.model.AddressComponent;
-import com.google.maps.model.AddressComponentType;
 import com.google.maps.model.GeocodingResult;
 import com.google.maps.model.LatLng;
-
-import com.google.maps.model.PlacesSearchResponse;
+import com.google.maps.model.AddressComponent;
+import com.google.maps.model.AddressComponentType;
 import com.google.maps.model.PlacesSearchResult;
+import com.google.maps.model.PlacesSearchResponse;
 import greencity.constant.ErrorMessage;
 import greencity.dto.filter.FilterPlacesApiDto;
 import greencity.dto.geocoding.AddressResponse;
@@ -21,9 +20,7 @@ import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.NotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-
 import org.springframework.stereotype.Service;
-
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -36,8 +33,8 @@ import java.util.Locale;
 @Slf4j
 public class GoogleApiService {
     private final GeoApiContext context;
-    private static final Locale UKRAINIAN = new Locale("uk");
-    private static final Locale ENGLISH = new Locale("en");
+    private static final Locale UKRAINIAN = Locale.of("uk");
+    private static final Locale ENGLISH = Locale.of("en");
     private static final List<Locale> LOCALES = List.of(UKRAINIAN, ENGLISH);
 
     /**
@@ -51,7 +48,9 @@ public class GoogleApiService {
         LOCALES.forEach(locale -> {
             try {
                 GeocodingResult[] results = GeocodingApi.newRequest(context)
-                    .address(searchRequest).language(locale.getLanguage()).await();
+                    .address(searchRequest)
+                    .language(locale.getLanguage())
+                    .await();
                 Collections.addAll(geocodingResults, results);
             } catch (IOException | InterruptedException | ApiException e) {
                 log.error("Occurred error during the call on google API, reason: {}", e.getMessage());
