@@ -30,12 +30,12 @@ public class RatingStatisticsServiceImpl implements RatingStatisticsService {
         Page<RatingStatistics> ratingStatistics) {
         List<RatingStatisticsDto> ratingStatisticsDtos = ratingStatistics.get()
             .map(ratingStat -> modelMapper.map(ratingStat, RatingStatisticsDto.class))
-            .collect(Collectors.toList());
+            .toList();
         List<RatingStatisticsDtoForTables> ratingStatisticsDtoForTablesDtos = ratingStatisticsDtos.stream()
             .map(x -> RatingStatisticsDtoForTables.builder()
                 .id(x.getId())
                 .createDate(x.getCreateDate())
-                .eventName(x.getRatingCalculationEnum().toString())
+                .eventName(x.getRatingPoints().getName())
                 .pointsChanged(x.getPointsChanged())
                 .rating(x.getRating())
                 .userId(x.getUser().getId())
@@ -112,8 +112,8 @@ public class RatingStatisticsServiceImpl implements RatingStatisticsService {
         }
         if (!ratingStatisticsViewDto.getEventName().isEmpty()) {
             searchCriteria = SearchCriteria.builder()
-                .key(RatingStatistics_.RATING_CALCULATION_ENUM)
-                .type("enum")
+                .key(RatingStatistics_.RATING_POINTS)
+                .type(RatingStatistics_.RATING_POINTS)
                 .value(ratingStatisticsViewDto.getEventName())
                 .build();
             criteriaList.add(searchCriteria);
