@@ -1,12 +1,11 @@
 package greencity.mapping;
 
 import static greencity.ModelUtils.*;
-import static greencity.ModelUtils.getHabitAssignForMapper;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import greencity.dto.habit.HabitAssignDto;
 import greencity.entity.HabitAssign;
-import greencity.enums.ShoppingListItemStatus;
+import greencity.enums.ToDoListItemStatus;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -23,7 +22,7 @@ class HabitAssignMapperTest {
         HabitAssignDto habitAssignDto = getFullHabitAssignDto();
         HabitAssign convert = habitAssignMapper.convert(habitAssignDto);
         HabitAssign habitAssignForMapper = getHabitAssignForMapper();
-        habitAssignForMapper.getUserShoppingListItems().get(0).setStatus(ShoppingListItemStatus.INPROGRESS);
+        habitAssignForMapper.getUserToDoListItems().getFirst().setStatus(ToDoListItemStatus.INPROGRESS);
         assertEquals(habitAssignForMapper, convert);
 
     }
