@@ -2,12 +2,7 @@ package greencity.mapping;
 
 import greencity.ModelUtils;
 import greencity.dto.search.SearchNewsDto;
-import greencity.dto.user.EcoNewsAuthorDto;
 import greencity.entity.EcoNews;
-import greencity.entity.User;
-import java.util.stream.Collectors;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
 import greencity.entity.localization.TagTranslation;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -15,6 +10,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.context.i18n.LocaleContextHolder;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @ExtendWith(MockitoExtension.class)
 class SearchNewsDtoMapperTest {
@@ -22,8 +18,6 @@ class SearchNewsDtoMapperTest {
     private SearchNewsDtoMapper searchNewsDtoMapper;
 
     private EcoNews ecoNewsTest = ModelUtils.getEcoNews();
-
-    private User user = ModelUtils.getUser();
 
     @BeforeEach
     void init() {
@@ -37,15 +31,11 @@ class SearchNewsDtoMapperTest {
         SearchNewsDto searchedNews = SearchNewsDto.builder()
             .id(1L)
             .title(ecoNewsTest.getTitle())
-            .author(new EcoNewsAuthorDto(user.getId(),
-                user.getName()))
-            .creationDate(ecoNewsTest.getCreationDate())
-            .tags(ecoNewsTest.getTags()
-                .stream()
+            .tags(ecoNewsTest.getTags().stream()
                 .flatMap(t -> t.getTagTranslations().stream())
                 .filter(tagTranslation -> tagTranslation.getLanguage().getCode().equals(language))
                 .map(TagTranslation::getName)
-                .collect(Collectors.toList()))
+                .toList())
             .build();
 
         assertEquals(searchedNews, searchNewsDtoMapper.convert(ecoNewsTest));
