@@ -2,7 +2,9 @@ package greencity.service;
 
 import greencity.ModelUtils;
 import greencity.constant.ErrorMessage;
+import greencity.constant.FriendTupleConstant;
 import greencity.dto.PageableDto;
+import greencity.dto.friends.UserAsFriendDto;
 import greencity.dto.friends.UserFriendDto;
 import greencity.dto.user.UserManagementDto;
 import greencity.entity.User;
@@ -14,8 +16,13 @@ import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.UnsupportedSortException;
 import greencity.repository.CustomUserRepo;
 import greencity.repository.UserRepo;
+import jakarta.persistence.Tuple;
+import java.util.List;
+import java.util.Optional;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.NullAndEmptySource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -25,19 +32,19 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
-
-import java.util.List;
-import java.util.Optional;
-
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.never;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.anyLong;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.anyString;
 
 @ExtendWith(MockitoExtension.class)
 class FriendServiceImplTest {
@@ -50,6 +57,12 @@ class FriendServiceImplTest {
     private CustomUserRepo customUserRepo;
     @Mock
     private ModelMapper modelMapper;
+
+    @Mock
+    NotificationService notificationService;
+
+    @Mock
+    UserNotificationService userNotificationService;
 
     @Test
     void deleteUserFriendByIdTest() {
@@ -134,14 +147,15 @@ class FriendServiceImplTest {
         when(userRepo.existsById(friendId)).thenReturn(true);
         when(userRepo.isFriendRequested(userId, friendId)).thenReturn(false);
         when(userRepo.isFriend(userId, friendId)).thenReturn(false);
-
+        when(userRepo.getReferenceById(userId)).thenReturn(ModelUtils.getUser());
+        when(userRepo.getReferenceById(friendId)).thenReturn(ModelUtils.getTestUser());
         friendService.addNewFriend(userId, friendId);
-
         verify(userRepo).existsById(userId);
         verify(userRepo).existsById(friendId);
         verify(userRepo).isFriendRequested(userId, friendId);
         verify(userRepo).isFriend(userId, friendId);
         verify(userRepo).addNewFriend(userId, friendId);
+        verify(userRepo, times(2)).getReferenceById(anyLong());
     }
 
     @Test
@@ -251,14 +265,15 @@ class FriendServiceImplTest {
         when(userRepo.existsById(friendId)).thenReturn(true);
         when(userRepo.isFriend(userId, friendId)).thenReturn(false);
         when(userRepo.isFriendRequestedByCurrentUser(friendId, userId)).thenReturn(true);
-
+        when(userRepo.getReferenceById(userId)).thenReturn(ModelUtils.getUser());
+        when(userRepo.getReferenceById(friendId)).thenReturn(ModelUtils.getTestUser());
         friendService.acceptFriendRequest(userId, friendId);
-
         verify(userRepo).existsById(userId);
         verify(userRepo).existsById(friendId);
         verify(userRepo).isFriend(userId, friendId);
         verify(userRepo).isFriendRequestedByCurrentUser(friendId, userId);
         verify(userRepo).acceptFriendRequest(userId, friendId);
+        verify(userRepo, times(2)).getReferenceById(anyLong());
     }
 
     @Test
@@ -489,7 +504,7 @@ class FriendServiceImplTest {
 
         verify(userRepo).existsById(userId);
         verify(userRepo).getAllUserFriendsPage(pageable, userId);
-        verify(modelMapper).map(users.getContent().get(0), UserManagementDto.class);
+        verify(modelMapper).map(users.getContent().getFirst(), UserManagementDto.class);
     }
 
     @Test
@@ -505,7 +520,6 @@ class FriendServiceImplTest {
         assertEquals(ErrorMessage.USER_NOT_FOUND_BY_ID + userId, exception.getMessage());
 
         verify(userRepo).existsById(userId);
-        verify(userRepo, never()).getAllUserFriends(anyLong());
         verify(modelMapper, never()).map(anyLong(), any());
     }
 
@@ -534,25 +548,27 @@ class FriendServiceImplTest {
         String name = "vi";
 
         when(userRepo.existsById(userId)).thenReturn(true);
-        when(userRepo.getAllUsersExceptMainUserAndFriendsAndRequestersToMainUser(userId, name, pageable))
+        when(userRepo.getAllUsersExceptMainUserAndFriendsAndRequestersToMainUser(userId, name, false, false, pageable))
             .thenReturn(userPage);
         when(
             customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId, userPage.getContent()))
-                .thenReturn(List.of(expectedResult));
+            .thenReturn(List.of(expectedResult));
 
         PageableDto<UserFriendDto> pageableDto =
-            friendService.findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUser(userId, name, pageable);
+            friendService.findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUser(userId, name, false, false,
+                pageable);
 
         assertNotNull(pageableDto);
         assertNotNull(pageableDto.getPage());
         assertEquals(1, pageableDto.getPage().size());
-        assertEquals(expectedResult, pageableDto.getPage().get(0));
+        assertEquals(expectedResult, pageableDto.getPage().getFirst());
         assertEquals(totalElements, pageableDto.getTotalElements());
         assertEquals(totalElements, pageableDto.getTotalPages());
         assertEquals(page, pageableDto.getCurrentPage());
 
         verify(userRepo).existsById(userId);
-        verify(userRepo).getAllUsersExceptMainUserAndFriendsAndRequestersToMainUser(userId, name, pageable);
+        verify(userRepo).getAllUsersExceptMainUserAndFriendsAndRequestersToMainUser(userId, name, false, false,
+            pageable);
         verify(customUserRepo).fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId,
             userPage.getContent());
     }
@@ -560,50 +576,43 @@ class FriendServiceImplTest {
     @Test
     void findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUserUnsupportedSortExceptionTest() {
         long userId = 1L;
-
-        PageRequest pageable = PageRequest.of(0, 1, Sort.by("id"));
         String name = "vi";
+        boolean filterByFriendsOfFriends = false;
+        boolean filterByCity = false;
+        PageRequest pageable = PageRequest.of(0, 1, Sort.by("id"));
 
         when(userRepo.existsById(userId)).thenReturn(true);
 
-        assertThrows(UnsupportedSortException.class, () -> {
-            friendService.findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUser(1L,
-                name, pageable);
-        });
+        assertThrows(UnsupportedSortException.class,
+            () -> friendService.findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUser(
+                userId, name, filterByFriendsOfFriends, filterByCity, pageable));
     }
 
-    @Test
-    void findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUserWhenNameIsNullTest() {
+    @ParameterizedTest
+    @NullAndEmptySource
+    void findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUserWhenNameIsNullTest(String name) {
         long userId = 1L;
-        int page = 0;
-        int size = 1;
-        long totalElements = 50;
-        Pageable pageable = PageRequest.of(page, size);
-        UserFriendDto expectedResult = ModelUtils.getUserFriendDto();
-        Page<User> userPage = new PageImpl<>(List.of(ModelUtils.getUser()), pageable, totalElements);
+        boolean filterByFriendsOfFriends = false;
+        boolean filterByCity = false;
+        Pageable pageable = PageRequest.of(0, 10);
 
         when(userRepo.existsById(userId)).thenReturn(true);
-        when(userRepo.getAllUsersExceptMainUserAndFriendsAndRequestersToMainUser(userId, "", pageable))
-            .thenReturn(userPage);
-        when(
-            customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId, userPage.getContent()))
-                .thenReturn(List.of(expectedResult));
+        when(userRepo.getAllUsersExceptMainUserAndFriendsAndRequestersToMainUser(userId, "",
+            filterByFriendsOfFriends, filterByCity, pageable)).thenReturn(ModelUtils.getUserPage());
+        when(customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId,
+            ModelUtils.getUserPage().getContent()))
+            .thenReturn(List.of(ModelUtils.getUserFriendDtoListFromUserPage()));
 
-        PageableDto<UserFriendDto> pageableDto =
-            friendService.findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUser(userId, null, pageable);
+        PageableDto<UserFriendDto> result =
+            friendService.findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUser(userId, name, false, false,
+                pageable);
 
-        assertNotNull(pageableDto);
-        assertNotNull(pageableDto.getPage());
-        assertEquals(1, pageableDto.getPage().size());
-        assertEquals(expectedResult, pageableDto.getPage().get(0));
-        assertEquals(totalElements, pageableDto.getTotalElements());
-        assertEquals(totalElements, pageableDto.getTotalPages());
-        assertEquals(page, pageableDto.getCurrentPage());
+        verify(userRepo, times(1)).existsById(userId);
 
-        verify(userRepo).existsById(userId);
-        verify(userRepo).getAllUsersExceptMainUserAndFriendsAndRequestersToMainUser(userId, "", pageable);
-        verify(customUserRepo).fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId,
-            userPage.getContent());
+        assertEquals(1, result.getPage().size());
+        assertEquals(1, result.getTotalElements());
+        assertEquals(0, result.getCurrentPage());
+        assertEquals(1, result.getTotalPages());
     }
 
     @Test
@@ -621,9 +630,9 @@ class FriendServiceImplTest {
         when(userRepo.getAllUserFriendsCollectingBySpecificConditionsAndCertainOrder(pageable, userId))
             .thenReturn(userPage);
         when(
-            customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId, userPage.getContent()))
-                .thenReturn(List.of(expectedResult));
-        when(userRepo.getFriendStatusByUserIdAndCurrentUserId(anyLong(), anyLong())).thenReturn("FRIEND");
+            customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(currentUserId,
+                userPage.getContent()))
+            .thenReturn(List.of(expectedResult));
 
         PageableDto<UserFriendDto> pageableDto = friendService
             .findUserFriendsByUserIAndShowFriendStatusRelatedToCurrentUser(pageable, userId, currentUserId);
@@ -631,16 +640,15 @@ class FriendServiceImplTest {
         assertNotNull(pageableDto);
         assertNotNull(pageableDto.getPage());
         assertEquals(1, pageableDto.getPage().size());
-        assertEquals(expectedResult, pageableDto.getPage().get(0));
+        assertEquals(expectedResult, pageableDto.getPage().getFirst());
         assertEquals(totalElements, pageableDto.getTotalElements());
         assertEquals(totalElements, pageableDto.getTotalPages());
         assertEquals(page, pageableDto.getCurrentPage());
 
         verify(userRepo).existsById(userId);
         verify(userRepo).getAllUserFriendsCollectingBySpecificConditionsAndCertainOrder(pageable, userId);
-        verify(customUserRepo).fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId,
+        verify(customUserRepo).fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(currentUserId,
             userPage.getContent());
-        verify(userRepo).getFriendStatusByUserIdAndCurrentUserId(anyLong(), anyLong());
     }
 
     @Test
@@ -651,10 +659,8 @@ class FriendServiceImplTest {
 
         when(userRepo.existsById(userId)).thenReturn(false);
 
-        assertThrows(NotFoundException.class, () -> {
-            friendService.findUserFriendsByUserIAndShowFriendStatusRelatedToCurrentUser(pageable, userId,
-                currentUserId);
-        });
+        assertThrows(NotFoundException.class, () -> friendService
+            .findUserFriendsByUserIAndShowFriendStatusRelatedToCurrentUser(pageable, userId, currentUserId));
 
         verify(userRepo).existsById(userId);
     }
@@ -667,10 +673,8 @@ class FriendServiceImplTest {
 
         when(userRepo.existsById(userId)).thenReturn(true);
 
-        assertThrows(UnsupportedSortException.class, () -> {
-            friendService.findUserFriendsByUserIAndShowFriendStatusRelatedToCurrentUser(pageable, userId,
-                currentUserId);
-        });
+        assertThrows(UnsupportedSortException.class, () -> friendService
+            .findUserFriendsByUserIAndShowFriendStatusRelatedToCurrentUser(pageable, userId, currentUserId));
 
         verify(userRepo).existsById(userId);
     }
@@ -690,14 +694,14 @@ class FriendServiceImplTest {
         when(userRepo.getRecommendedFriendsOfFriends(userId, pageable)).thenReturn(userPage);
         when(
             customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId, userPage.getContent()))
-                .thenReturn(List.of(expectedResult));
+            .thenReturn(List.of(expectedResult));
 
         PageableDto<UserFriendDto> pageableDto =
             friendService.findRecommendedFriends(userId, RecommendedFriendsType.FRIENDS_OF_FRIENDS, pageable);
 
         assertNotNull(pageableDto.getPage());
         assertEquals(1, pageableDto.getPage().size());
-        assertEquals(expectedResult, pageableDto.getPage().get(0));
+        assertEquals(expectedResult, pageableDto.getPage().getFirst());
         assertEquals(totalElements, pageableDto.getTotalElements());
         assertEquals(totalElements, pageableDto.getTotalPages());
         assertEquals(page, pageableDto.getCurrentPage());
@@ -724,14 +728,14 @@ class FriendServiceImplTest {
         when(userRepo.getAllUsersExceptMainUserAndFriends(userId, "", pageable)).thenReturn(userPage);
         when(
             customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId, userPage.getContent()))
-                .thenReturn(List.of(expectedResult));
+            .thenReturn(List.of(expectedResult));
 
         PageableDto<UserFriendDto> pageableDto =
             friendService.findRecommendedFriends(userId, null, pageable);
 
         assertNotNull(pageableDto.getPage());
         assertEquals(1, pageableDto.getPage().size());
-        assertEquals(expectedResult, pageableDto.getPage().get(0));
+        assertEquals(expectedResult, pageableDto.getPage().getFirst());
         assertEquals(totalElements, pageableDto.getTotalElements());
         assertEquals(totalElements, pageableDto.getTotalPages());
         assertEquals(page, pageableDto.getCurrentPage());
@@ -758,14 +762,14 @@ class FriendServiceImplTest {
         when(userRepo.findRecommendedFriendsByHabits(userId, pageable)).thenReturn(userPage);
         when(
             customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId, userPage.getContent()))
-                .thenReturn(List.of(expectedResult));
+            .thenReturn(List.of(expectedResult));
 
         PageableDto<UserFriendDto> pageableDto =
             friendService.findRecommendedFriends(userId, RecommendedFriendsType.HABITS, pageable);
 
         assertNotNull(pageableDto.getPage());
         assertEquals(1, pageableDto.getPage().size());
-        assertEquals(expectedResult, pageableDto.getPage().get(0));
+        assertEquals(expectedResult, pageableDto.getPage().getFirst());
         assertEquals(totalElements, pageableDto.getTotalElements());
         assertEquals(totalElements, pageableDto.getTotalPages());
         assertEquals(page, pageableDto.getCurrentPage());
@@ -797,13 +801,13 @@ class FriendServiceImplTest {
         when(userRepo.findRecommendedFriendsByCity(userId, "testCity", pageable)).thenReturn(userPage);
         when(
             customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId, userPage.getContent()))
-                .thenReturn(List.of(expectedResult));
+            .thenReturn(List.of(expectedResult));
         PageableDto<UserFriendDto> pageableDto =
             friendService.findRecommendedFriends(userId, RecommendedFriendsType.CITY, pageable);
 
         assertNotNull(pageableDto.getPage());
         assertEquals(1, pageableDto.getPage().size());
-        assertEquals(expectedResult, pageableDto.getPage().get(0));
+        assertEquals(expectedResult, pageableDto.getPage().getFirst());
         assertEquals(totalElements, pageableDto.getTotalElements());
         assertEquals(totalElements, pageableDto.getTotalPages());
         assertEquals(page, pageableDto.getCurrentPage());
@@ -813,6 +817,54 @@ class FriendServiceImplTest {
         verify(userRepo).findRecommendedFriendsByCity(userId, "testCity", pageable);
         verify(customUserRepo).fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId,
             userPage.getContent());
+    }
+
+    @Test
+    void findRecommendedFriendsByCityWhenLocationNullTest() {
+        long userId = 1L;
+        int page = 0;
+        int size = 1;
+        Pageable pageable = PageRequest.of(page, size);
+        User userWithNullLocation = new User();
+
+        when(userRepo.findById(userId)).thenReturn(Optional.of(userWithNullLocation));
+        when(userRepo.existsById(userId)).thenReturn(true);
+        PageableDto<UserFriendDto> pageableDto =
+            friendService.findRecommendedFriends(userId, RecommendedFriendsType.CITY, pageable);
+
+        assertNotNull(pageableDto);
+        assertTrue(pageableDto.getPage().isEmpty());
+        assertEquals(0, pageableDto.getTotalElements());
+        assertEquals(0, pageableDto.getTotalPages());
+        assertEquals(page, pageableDto.getCurrentPage());
+
+        verify(userRepo, times(1)).findById(userId);
+        verify(userRepo, never()).findRecommendedFriendsByCity(anyLong(), anyString(), any(Pageable.class));
+    }
+
+    @Test
+    void findRecommendedFriendsByCityWhenCityNullTest() {
+        long userId = 1L;
+        int page = 0;
+        int size = 1;
+        Pageable pageable = PageRequest.of(page, size);
+        UserLocation userLocation = new UserLocation();
+        User userWithNullCity = new User();
+        userWithNullCity.setUserLocation(userLocation);
+
+        when(userRepo.findById(userId)).thenReturn(Optional.of(userWithNullCity));
+        when(userRepo.existsById(userId)).thenReturn(true);
+        PageableDto<UserFriendDto> pageableDto =
+            friendService.findRecommendedFriends(userId, RecommendedFriendsType.CITY, pageable);
+
+        assertNotNull(pageableDto);
+        assertTrue(pageableDto.getPage().isEmpty());
+        assertEquals(0, pageableDto.getTotalElements());
+        assertEquals(0, pageableDto.getTotalPages());
+        assertEquals(page, pageableDto.getCurrentPage());
+
+        verify(userRepo, times(1)).findById(userId);
+        verify(userRepo, never()).findRecommendedFriendsByCity(anyLong(), anyString(), any(Pageable.class));
     }
 
     @Test
@@ -831,14 +883,14 @@ class FriendServiceImplTest {
         when(userRepo.getMutualFriends(userId, friendId, pageable)).thenReturn(userPage);
         when(
             customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId, userPage.getContent()))
-                .thenReturn(List.of(expectedResult));
+            .thenReturn(List.of(expectedResult));
 
         PageableDto<UserFriendDto> pageableDto =
             friendService.getMutualFriends(userId, friendId, pageable);
 
         assertNotNull(pageableDto.getPage());
         assertEquals(1, pageableDto.getPage().size());
-        assertEquals(expectedResult, pageableDto.getPage().get(0));
+        assertEquals(expectedResult, pageableDto.getPage().getFirst());
         assertEquals(totalElements, pageableDto.getTotalElements());
         assertEquals(totalElements, pageableDto.getTotalPages());
         assertEquals(page, pageableDto.getCurrentPage());
@@ -859,7 +911,11 @@ class FriendServiceImplTest {
         when(userRepo.existsById(userId)).thenReturn(false);
 
         NotFoundException exception = assertThrows(NotFoundException.class,
-            () -> friendService.findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUser(userId, name,
+            () -> friendService.findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUser(
+                userId,
+                name,
+                false,
+                false,
                 pageable));
 
         assertEquals(ErrorMessage.USER_NOT_FOUND_BY_ID + userId, exception.getMessage());
@@ -873,9 +929,12 @@ class FriendServiceImplTest {
     void findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUserWhenPageableIsNullTest() {
         long userId = 1L;
         String name = "vi";
+        boolean filterByFriendsOfFriends = false;
+        boolean filterByCity = false;
 
         assertThrows(NullPointerException.class,
-            () -> friendService.findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUser(userId, name, null));
+            () -> friendService.findAllUsersExceptMainUserAndUsersFriendAndRequestersToMainUser(userId, name,
+                filterByFriendsOfFriends, filterByCity, null));
 
         verify(userRepo, never()).existsById(anyLong());
         verify(userRepo, never()).getAllUsersExceptMainUserAndFriends(anyLong(), anyString(), any());
@@ -885,6 +944,8 @@ class FriendServiceImplTest {
     @Test
     void getAllUserFriendRequestsTest() {
         long userId = 1L;
+        String name = "";
+        boolean filterByCity = false;
         int page = 0;
         int size = 1;
         long totalElements = 50;
@@ -893,24 +954,24 @@ class FriendServiceImplTest {
         Page<User> userPage = new PageImpl<>(List.of(ModelUtils.getUser()), pageable, totalElements);
 
         when(userRepo.existsById(userId)).thenReturn(true);
-        when(userRepo.getAllUserFriendRequests(userId, pageable)).thenReturn(userPage);
+        when(userRepo.getAllUserFriendRequests(userId, name, filterByCity, pageable)).thenReturn(userPage);
         when(
             customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId, userPage.getContent()))
-                .thenReturn(List.of(expectedResult));
+            .thenReturn(List.of(expectedResult));
 
         PageableDto<UserFriendDto> pageableDto =
-            friendService.getAllUserFriendRequests(userId, pageable);
+            friendService.getAllUserFriendRequests(userId, name, filterByCity, pageable);
 
         assertNotNull(pageableDto);
         assertNotNull(pageableDto.getPage());
         assertEquals(1, pageableDto.getPage().size());
-        assertEquals(expectedResult, pageableDto.getPage().get(0));
+        assertEquals(expectedResult, pageableDto.getPage().getFirst());
         assertEquals(totalElements, pageableDto.getTotalElements());
         assertEquals(totalElements, pageableDto.getTotalPages());
         assertEquals(page, pageableDto.getCurrentPage());
 
         verify(userRepo).existsById(userId);
-        verify(userRepo).getAllUserFriendRequests(userId, pageable);
+        verify(userRepo).getAllUserFriendRequests(userId, name, filterByCity, pageable);
         verify(customUserRepo).fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId,
             userPage.getContent());
     }
@@ -918,35 +979,41 @@ class FriendServiceImplTest {
     @Test
     void getAllUserFriendRequestsWhenUserNotFoundTest() {
         long userId = 1L;
+        String name = "";
+        boolean filterByCity = false;
         Pageable pageable = PageRequest.of(0, 20);
 
         when(userRepo.existsById(userId)).thenReturn(false);
 
         NotFoundException exception = assertThrows(NotFoundException.class,
-            () -> friendService.getAllUserFriendRequests(userId, pageable));
+            () -> friendService.getAllUserFriendRequests(userId, name, filterByCity, pageable));
 
         assertEquals(ErrorMessage.USER_NOT_FOUND_BY_ID + userId, exception.getMessage());
 
         verify(userRepo).existsById(1L);
-        verify(userRepo, never()).getAllUserFriendRequests(anyLong(), any());
+        verify(userRepo, never()).getAllUserFriendRequests(anyLong(), anyString(), anyBoolean(), any());
         verify(customUserRepo, never()).fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(anyLong(), any());
     }
 
     @Test
     void getAllUserFriendRequestsWhenPageableIsNullTest() {
         long userId = 1L;
+        String name = "";
+        boolean filterByCity = false;
 
         assertThrows(NullPointerException.class,
-            () -> friendService.getAllUserFriendRequests(userId, null));
+            () -> friendService.getAllUserFriendRequests(userId, name, filterByCity, null));
 
         verify(userRepo, never()).existsById(anyLong());
-        verify(userRepo, never()).getAllUserFriendRequests(anyLong(), any());
+        verify(userRepo, never()).getAllUserFriendRequests(anyLong(), anyString(), anyBoolean(), any());
         verify(customUserRepo, never()).fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(anyLong(), any());
     }
 
     @Test
     void findAllFriendsOfUserTest() {
         long userId = 1L;
+        String name = "vi";
+        boolean filterByCity = false;
         int page = 0;
         int size = 1;
         long totalElements = 50;
@@ -954,27 +1021,26 @@ class FriendServiceImplTest {
         UserFriendDto expectedResult = ModelUtils.getUserFriendDto();
         expectedResult.setFriendStatus("FRIEND");
         Page<User> userPage = new PageImpl<>(List.of(ModelUtils.getUser()), pageable, totalElements);
-        String name = "vi";
 
         when(userRepo.existsById(userId)).thenReturn(true);
-        when(userRepo.findAllFriendsOfUser(userId, name, pageable)).thenReturn(userPage);
+        when(userRepo.findAllFriendsOfUser(userId, name, filterByCity, pageable)).thenReturn(userPage);
         when(
             customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId, userPage.getContent()))
-                .thenReturn(List.of(expectedResult));
+            .thenReturn(List.of(expectedResult));
 
         PageableDto<UserFriendDto> pageableDto =
-            friendService.findAllFriendsOfUser(userId, name, pageable);
+            friendService.findAllFriendsOfUser(userId, name, filterByCity, pageable);
 
         assertNotNull(pageableDto);
         assertNotNull(pageableDto.getPage());
         assertEquals(1, pageableDto.getPage().size());
-        assertEquals(expectedResult, pageableDto.getPage().get(0));
+        assertEquals(expectedResult, pageableDto.getPage().getFirst());
         assertEquals(totalElements, pageableDto.getTotalElements());
         assertEquals(totalElements, pageableDto.getTotalPages());
         assertEquals(page, pageableDto.getCurrentPage());
 
         verify(userRepo).existsById(userId);
-        verify(userRepo).findAllFriendsOfUser(userId, name, pageable);
+        verify(userRepo).findAllFriendsOfUser(userId, name, filterByCity, pageable);
         verify(customUserRepo).fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId,
             userPage.getContent());
     }
@@ -982,6 +1048,7 @@ class FriendServiceImplTest {
     @Test
     void findAllFriendsOfUserWhenNameIsNullTest() {
         long userId = 1L;
+        boolean filterByCity = false;
         int page = 0;
         int size = 1;
         long totalElements = 50;
@@ -990,24 +1057,24 @@ class FriendServiceImplTest {
         Page<User> userPage = new PageImpl<>(List.of(ModelUtils.getUser()), pageable, totalElements);
 
         when(userRepo.existsById(userId)).thenReturn(true);
-        when(userRepo.findAllFriendsOfUser(userId, "", pageable)).thenReturn(userPage);
+        when(userRepo.findAllFriendsOfUser(userId, null, filterByCity, pageable)).thenReturn(userPage);
         when(
             customUserRepo.fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId, userPage.getContent()))
-                .thenReturn(List.of(expectedResult));
+            .thenReturn(List.of(expectedResult));
 
         PageableDto<UserFriendDto> pageableDto =
-            friendService.findAllFriendsOfUser(userId, null, pageable);
+            friendService.findAllFriendsOfUser(userId, null, filterByCity, pageable);
 
         assertNotNull(pageableDto);
         assertNotNull(pageableDto.getPage());
         assertEquals(1, pageableDto.getPage().size());
-        assertEquals(expectedResult, pageableDto.getPage().get(0));
+        assertEquals(expectedResult, pageableDto.getPage().getFirst());
         assertEquals(totalElements, pageableDto.getTotalElements());
         assertEquals(totalElements, pageableDto.getTotalPages());
         assertEquals(page, pageableDto.getCurrentPage());
 
         verify(userRepo).existsById(userId);
-        verify(userRepo).findAllFriendsOfUser(userId, "", pageable);
+        verify(userRepo).findAllFriendsOfUser(userId, null, filterByCity, pageable);
         verify(customUserRepo).fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(userId,
             userPage.getContent());
     }
@@ -1015,15 +1082,14 @@ class FriendServiceImplTest {
     @Test
     void findAllFriendsOfUserWhenUnsupportedSortExceptionTest() {
         long userId = 1L;
-        PageRequest pageable = PageRequest.of(0, 1, Sort.by("id"));
         String name = "vi";
+        boolean filterByCity = false;
+        PageRequest pageable = PageRequest.of(0, 1, Sort.by("id"));
 
         when(userRepo.existsById(userId)).thenReturn(true);
 
-        assertThrows(UnsupportedSortException.class, () -> {
-            friendService.findAllFriendsOfUser(1L,
-                name, pageable);
-        });
+        assertThrows(UnsupportedSortException.class,
+            () -> friendService.findAllFriendsOfUser(1L, name, filterByCity, pageable));
 
         verify(userRepo).existsById(1L);
     }
@@ -1032,17 +1098,18 @@ class FriendServiceImplTest {
     void findAllFriendsOfUserWhenUserNotFoundTest() {
         long userId = 1L;
         String name = "vi";
+        boolean filterByCity = false;
         Pageable pageable = PageRequest.of(0, 20);
 
         when(userRepo.existsById(userId)).thenReturn(false);
 
         NotFoundException exception = assertThrows(NotFoundException.class,
-            () -> friendService.findAllFriendsOfUser(userId, name, pageable));
+            () -> friendService.findAllFriendsOfUser(userId, name, filterByCity, pageable));
 
         assertEquals(ErrorMessage.USER_NOT_FOUND_BY_ID + userId, exception.getMessage());
 
         verify(userRepo).existsById(userId);
-        verify(userRepo, never()).findAllFriendsOfUser(anyLong(), anyString(), any());
+        verify(userRepo, never()).findAllFriendsOfUser(anyLong(), anyString(), anyBoolean(), any());
         verify(customUserRepo, never()).fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(anyLong(), any());
     }
 
@@ -1050,12 +1117,13 @@ class FriendServiceImplTest {
     void findAllFriendsOfUserWhenPageableIsNullTest() {
         long userId = 1L;
         String name = "vi";
+        boolean filterByCity = false;
 
         assertThrows(NullPointerException.class,
-            () -> friendService.findAllFriendsOfUser(userId, name, null));
+            () -> friendService.findAllFriendsOfUser(userId, name, filterByCity, null));
 
         verify(userRepo, never()).existsById(anyLong());
-        verify(userRepo, never()).findAllFriendsOfUser(anyLong(), anyString(), any());
+        verify(userRepo, never()).findAllFriendsOfUser(anyLong(), anyString(), anyBoolean(), any());
         verify(customUserRepo, never()).fillListOfUserWithCountOfMutualFriendsAndChatIdForCurrentUser(anyLong(), any());
     }
 
@@ -1174,5 +1242,57 @@ class FriendServiceImplTest {
         verify(userRepo).isFriend(userId, friendId);
         verify(userRepo).isFriendRequestedByCurrentUser(userId, friendId);
         verify(userRepo, never()).canselUserRequestToFriend(anyLong(), anyLong());
+    }
+
+    @Test
+    void getUserAsFriendTest() {
+        UserAsFriendDto expected = ModelUtils.getUserAsFriendDto();
+        Long userId = 2L;
+        Long friendId = expected.getId();
+        Tuple tuple = mock(Tuple.class);
+
+        when(userRepo.existsById(friendId)).thenReturn(true);
+        when(userRepo.findUsersFriendByUserIdAndFriendId(userId, friendId))
+            .thenReturn(tuple);
+        when(userRepo.findIdOfPrivateChatOfUsers(userId, friendId))
+            .thenReturn(expected.getChatId());
+
+        when(tuple.get(FriendTupleConstant.STATUS, String.class)).thenReturn(expected.getFriendStatus());
+        when(tuple.get(FriendTupleConstant.REQUESTER_ID, Long.class)).thenReturn(expected.getRequesterId());
+
+        assertEquals(expected, friendService.getUserAsFriend(userId, friendId));
+
+        verify(userRepo).existsById(anyLong());
+        verify(userRepo).findUsersFriendByUserIdAndFriendId(anyLong(), anyLong());
+        verify(userRepo).findIdOfPrivateChatOfUsers(anyLong(), anyLong());
+        verify(tuple).get(FriendTupleConstant.STATUS, String.class);
+        verify(tuple).get(FriendTupleConstant.REQUESTER_ID, Long.class);
+    }
+
+    @Test
+    void getUserAsFriendIfUsersAreNotFriendsAndDoNotHaveChatTest() {
+        UserAsFriendDto expected = new UserAsFriendDto(1L, null);
+
+        Long userId = 2L;
+        Long friendId = expected.getId();
+
+        when(userRepo.existsById(friendId)).thenReturn(true);
+        when(userRepo.findUsersFriendByUserIdAndFriendId(userId, friendId)).thenReturn(null);
+        when(userRepo.findIdOfPrivateChatOfUsers(userId, friendId)).thenReturn(null);
+
+        assertEquals(expected, friendService.getUserAsFriend(userId, friendId));
+        verify(userRepo).existsById(anyLong());
+        verify(userRepo).findUsersFriendByUserIdAndFriendId(anyLong(), anyLong());
+        verify(userRepo).findIdOfPrivateChatOfUsers(anyLong(), anyLong());
+    }
+
+    @Test
+    void getUserAsFriendIfUsersThrowsNotFoundExceptionTest() {
+        Long friendId = 2L;
+
+        when(userRepo.existsById(friendId)).thenReturn(false);
+
+        assertThrows(NotFoundException.class, () -> friendService.getUserAsFriend(1L, friendId));
+        verify(userRepo).existsById(anyLong());
     }
 }
