@@ -4,19 +4,20 @@ import greencity.ModelUtils;
 import greencity.achievement.AchievementCalculation;
 import greencity.client.RestClient;
 import greencity.dto.PageableDto;
-import greencity.dto.comment.AddCommentDto;
-import greencity.dto.comment.CommentAdminDto;
-import greencity.dto.comment.CommentReturnDto;
+import greencity.dto.placecomment.PlaceCommentRequestDto;
+import greencity.dto.placecomment.PlaceCommentAdminDto;
+import greencity.dto.placecomment.PlaceCommentResponseDto;
 import greencity.dto.user.UserVO;
-import greencity.entity.Comment;
-import greencity.entity.User;
+import greencity.entity.PlaceComment;
+import greencity.entity.RatingPoints;
 import greencity.enums.UserStatus;
 import greencity.rating.RatingCalculation;
 import greencity.repository.PlaceCommentRepo;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import javax.servlet.http.HttpServletRequest;
+import greencity.repository.RatingPointsRepo;
+import jakarta.servlet.http.HttpServletRequest;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -54,19 +55,21 @@ class PlaceCommentServiceImplTest {
     @Mock
     private UserService userService;
     @Mock
+    private RatingPointsRepo ratingPointsRepo;
+    @Mock
     private RatingCalculation ratingCalculation;
     @Mock
     private AchievementCalculation achievementCalculation;
 
     @Test
     void findByIdTest() {
-        Comment comment = ModelUtils.getComment();
-        CommentReturnDto commentReturnDto = ModelUtils.getCommentReturnDto();
+        PlaceComment comment = ModelUtils.getPlaceComment();
+        PlaceCommentResponseDto placeCommentResponseDto = ModelUtils.getCommentReturnDto();
         when(placeCommentRepo.findById(1L))
             .thenReturn(Optional.of(comment));
-        when(modelMapper.map(comment, CommentReturnDto.class))
-            .thenReturn(commentReturnDto);
-        CommentReturnDto result = placeCommentService.findById(1L);
+        when(modelMapper.map(comment, PlaceCommentResponseDto.class))
+            .thenReturn(placeCommentResponseDto);
+        PlaceCommentResponseDto result = placeCommentService.findById(1L);
         assertEquals(1, (long) result.getId());
     }
 
@@ -74,7 +77,9 @@ class PlaceCommentServiceImplTest {
     void deleteByIdTest() {
         String accessToken = "Token";
         UserVO userVO = ModelUtils.getUserVO();
-        Comment comment = ModelUtils.getComment();
+        PlaceComment comment = ModelUtils.getPlaceComment();
+        RatingPoints ratingPoints = RatingPoints.builder().id(1L).name("UNDO_LIKE_COMMENT_OR_REPLY").points(-1).build();
+        when(ratingPointsRepo.findByNameOrThrow("UNDO_LIKE_COMMENT_OR_REPLY")).thenReturn(ratingPoints);
         when(placeCommentRepo.findById(anyLong())).thenReturn(Optional.of(comment));
         doNothing().when(placeCommentRepo).delete(comment);
         when(securityContext.getAuthentication()).thenReturn(authentication);
@@ -92,30 +97,32 @@ class PlaceCommentServiceImplTest {
     @Test
     void saveTest() {
         String token = "token";
-        AddCommentDto addCommentDto = ModelUtils.getAddCommentDto();
-        Comment comment = ModelUtils.getComment();
+        PlaceCommentRequestDto placeCommentRequestDto = ModelUtils.getAddCommentDto();
+        PlaceComment comment = ModelUtils.getPlaceComment();
+        RatingPoints ratingPoints = RatingPoints.builder().id(1L).name("LIKE_COMMENT_OR_REPLY").points(1).build();
+        when(ratingPointsRepo.findByNameOrThrow("LIKE_COMMENT_OR_REPLY")).thenReturn(ratingPoints);
         when(placeService.findById(anyLong())).thenReturn(ModelUtils.getPlaceVO());
         UserVO userVO = ModelUtils.getUserVO();
         userVO.setUserStatus(UserStatus.ACTIVATED);
         when(restClient.findByEmail(anyString())).thenReturn(userVO);
-        when(modelMapper.map(addCommentDto, Comment.class)).thenReturn(comment);
+        when(modelMapper.map(placeCommentRequestDto, PlaceComment.class)).thenReturn(comment);
         when(httpServletRequest.getHeader("Authorization")).thenReturn(token);
-        when(modelMapper.map(comment, CommentReturnDto.class))
+        when(modelMapper.map(comment, PlaceCommentResponseDto.class))
             .thenReturn(ModelUtils.getCommentReturnDto());
         when(placeCommentRepo.save(any())).thenReturn(comment);
-        placeCommentService.save(1L, addCommentDto, "email");
+        placeCommentService.save(1L, placeCommentRequestDto, "email");
         verify(placeCommentRepo, times(1)).save(comment);
     }
 
     @Test
     void getAllCommentsTest() {
         PageRequest pageRequest = PageRequest.of(0, 2);
-        List<CommentAdminDto> commentAdminDtos = Collections.singletonList(new CommentAdminDto());
-        List<Comment> list = Collections.singletonList(ModelUtils.getComment());
-        Page<Comment> comments = new PageImpl<>(list, pageRequest, list.size());
+        List<PlaceCommentAdminDto> commentAdminDtos = Collections.singletonList(new PlaceCommentAdminDto());
+        List<PlaceComment> list = Collections.singletonList(ModelUtils.getPlaceComment());
+        Page<PlaceComment> comments = new PageImpl<>(list, pageRequest, list.size());
 
-        PageableDto<CommentAdminDto> result = new PageableDto<>(commentAdminDtos, commentAdminDtos.size(), 0, 1);
-        when(modelMapper.map(list.get(0), CommentAdminDto.class)).thenReturn(commentAdminDtos.get(0));
+        PageableDto<PlaceCommentAdminDto> result = new PageableDto<>(commentAdminDtos, commentAdminDtos.size(), 0, 1);
+        when(modelMapper.map(list.getFirst(), PlaceCommentAdminDto.class)).thenReturn(new PlaceCommentAdminDto());
         when(placeCommentRepo.findAll(pageRequest)).thenReturn(comments);
 
         assertEquals(result, placeCommentService.getAllComments(pageRequest));
